# Water_openGL_case_study

./: CMakeLists.txt  app  readme.md
CODE-PASTE/: 1_BASIC_WINDOW.cpp  2_generating_gridp.cpp
REFERENCE/: 2_generating_grid.cpp  3_Water Simulation.cpp
include/glad/: glad.h
src/: glad.c  main.cpp
